@@ -1,3 +1,9 @@
+2011-11-24 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* In status report : add some features like apache user/group, status of the mysql cache, db size...
+2011-11-09 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* new feature : check if an extension need ext conf update (usefull after mass update)
+2011-10-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Add the number of pages for each domain
 2011-10-14 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Update the mod1 for 4.3< versions
 	* Add a query to flush errors log
